--- a/podcastrnext/src/components/Player/styles.module.scss
+++ b/podcastrnext/src/components/Player/styles.module.scss
@@ -4,7 +4,7 @@
     padding: 2rem 4rem;
 
     background: var(--purple-500);
-    color: var(--white);
+    color: #FFF;
 
     display:flex;
     flex-direction: column;
