--- a/podcastrnext/src/pages/home.module.scss
+++ b/podcastrnext/src/pages/home.module.scss
@@ -91,7 +91,7 @@
 
             width: 2.5rem;
             height: 2.5rem;
-            background: var(--white);
+            background: var(--green-500);
             border: 1px solid var(--gray-100);
             border-radius: 0.675rem;
             font-size: 0;
@@ -153,7 +153,7 @@
             button {
                 width: 2.3rem;
                 height: 2.3rem;
-                background: var(--white);
+                background: var(--green-500);
                 border: 1px solid var(--gray-100);
                 border-radius: 0.5rem;
                 font-size: 0;
