--- a/podcastrnext/src/components/Header/styles.module.scss
+++ b/podcastrnext/src/components/Header/styles.module.scss
@@ -19,3 +19,48 @@
         text-transform: capitalize;
     }
 }
+
+.inactive{
+    position: absolute;
+    top:2.4rem;
+    right:41.7%;
+
+    outline:none;
+    border: none;
+    background: var(--background);
+
+    color: var(--gray-500);
+}
+
+.active{
+    position: absolute;
+    top:2.4rem;
+    right:40%;
+
+    outline:none;
+    border: none;
+    background: var(--background);
+}
+
+
+.toggle{ 
+    border: 2px solid  var(--gray-200);
+    background: var(--gray-100);
+    padding-right: 15px;
+    padding: 8px 23px;
+    position: absolute;
+    top:2.6rem;
+    right:40%;
+    border-radius: 10px;
+}
+
+.activeToggle{
+    border: 2px solid  var(--gray-100);
+    background: var(--purple-800);
+    padding-right: 15px;
+    padding: 8px 23px;
+    position: absolute;
+    top:2.6rem;
+    right:40%;
+    border-radius: 10px;
+}
